feat(statistic): save player statistic
