# internal/controller/rest/docs/swagger.json
@@ -707,16 +707,16 @@
                         "MIN"
                     ]
                 },
-                "canOverflow": {
-                    "description": "Can overflow the goal?",
-                    "type": "boolean"
-                },
                 "description": {
                     "description": "Statistic details",
                     "type": "string"
                 },
                 "goal": {
                     "description": "Goal value. nil means no goal",
+                    "type": "number"
+                },
+                "initialValue": {
+                    "description": "Initial statistic value for players. Defaults to zero on `'aggregationMode' in ['SUM', 'SUB']`",
                     "type": "number"
                 },
                 "landmarks": {
@@ -872,10 +872,6 @@
                         "MIN"
                     ]
                 },
-                "canOverflow": {
-                    "description": "Can overflow the goal?",
-                    "type": "boolean"
-                },
                 "createdAt": {
                     "description": "Time that the statistic was created",
                     "type": "string"
@@ -895,6 +891,10 @@
                 "id": {
                     "description": "Statistic ID",
                     "type": "string"
+                },
+                "initialValue": {
+                    "description": "Initial statistic value for players. Defaults to zero on `'aggregationMode' in ['SUM', 'SUB']`",
+                    "type": "number"
                 },
                 "landmarks": {
                     "description": "Statistic landmarks",
