# internal/controller/rest/statistic.go
@@ -10,23 +10,25 @@ import (
 )
 
 type CreateStatisticReq struct {
-	Name            string    `json:"name"`                                // Statistic name
-	Description     string    `json:"description"`                         // Statistic details
-	AggregationMode string    `json:"aggregationMode" enums:"INC,MAX,MIN"` // Data aggregation mode
-	Goal            *float64  `json:"goal"`                                // Goal value. nil means no goal
-	Landmarks       []float64 `json:"landmarks"`                           // Statistic landmarks
+	Name            string    `json:"name"`                                    // Statistic name
+	Description     string    `json:"description"`                             // Statistic details
+	AggregationMode string    `json:"aggregationMode" enums:"SUM,SUB,MAX,MIN"` // Data aggregation mode
+	InitialValue    *float64  `json:"initialValue"`                            // Initial statistic value for players. Defaults to zero on `'aggregationMode' in ['SUM', 'SUB']`
+	Goal            *float64  `json:"goal"`                                    // Goal value. nil means no goal
+	Landmarks       []float64 `json:"landmarks"`                               // Statistic landmarks
 }
 
 type Statistic struct {
-	CreatedAt       time.Time `json:"createdAt"`                           // Time that the statistic was created
-	UpdatedAt       time.Time `json:"updatedAt"`                           // Last time that the statistic was updated
-	ID              string    `json:"id"`                                  // Statistic ID
-	GameID          string    `json:"gameId"`                              // ID of the game responsible for the statistic
-	Name            string    `json:"name"`                                // Statistic name
-	Description     string    `json:"description"`                         // Statistic details
-	AggregationMode string    `json:"aggregationMode" enums:"INC,MAX,MIN"` // Data aggregation mode
-	Goal            *float64  `json:"goal"`                                // Goal value. nil means no goal
-	Landmarks       []float64 `json:"landmarks"`                           // Statistic landmarks
+	CreatedAt       time.Time `json:"createdAt"`                               // Time that the statistic was created
+	UpdatedAt       time.Time `json:"updatedAt"`                               // Last time that the statistic was updated
+	ID              string    `json:"id"`                                      // Statistic ID
+	GameID          string    `json:"gameId"`                                  // ID of the game responsible for the statistic
+	Name            string    `json:"name"`                                    // Statistic name
+	Description     string    `json:"description"`                             // Statistic details
+	AggregationMode string    `json:"aggregationMode" enums:"SUM,SUB,MAX,MIN"` // Data aggregation mode
+	InitialValue    *float64  `json:"initialValue"`                            // Initial statistic value for players. Defaults to zero on `'aggregationMode' in ['SUM', 'SUB']`
+	Goal            *float64  `json:"goal"`                                    // Goal value. nil means no goal
+	Landmarks       []float64 `json:"landmarks"`                               // Statistic landmarks
 }
 
 func (s CreateStatisticReq) toDomain(gameID string) statistic.NewStatisticData {
@@ -35,6 +37,7 @@ func (s CreateStatisticReq) toDomain(gameID string) statistic.NewStatisticData {
 		Name:            s.Name,
 		Description:     s.Description,
 		AggregationMode: s.AggregationMode,
+		InitialValue:    s.InitialValue,
 		Goal:            s.Goal,
 		Landmarks:       s.Landmarks,
 	}
@@ -49,6 +52,7 @@ func statisticFromDomain(s statistic.Statistic) Statistic {
 		Name:            s.Name,
 		Description:     s.Description,
 		AggregationMode: s.AggregationMode,
+		InitialValue:    s.InitialValue,
 		Goal:            s.Goal,
 		Landmarks:       s.Landmarks,
 	}
